compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__same_string_on_either_side_of_equal_operator.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  case \"hi\" == \"hi\" {\n    True -> Nil\n    False -> Nil\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  case "hi" == "hi" {
    True -> Nil
    False -> Nil
  }
}


----- WARNING
warning: Same operand on either side of the equality operator
  ┌─ /src/warning/wrn.gleam:3:8
  │
3 │   case "hi" == "hi" {
  │        ^^^^^^^^^^^^ This will always be true
